terminalWIP scrollbar now visible, fix issue with safeHistoryToBuffer,  rename terminal.exec to terminal.watch

--- a/.welcome/1ncubate/terminal.css
+++ b/.welcome/1ncubate/terminal.css
@@ -1,5 +1,11 @@
 body { height: 100vh; width: 100vw; }
 
+::-webkit-scrollbar { width: 8px; height: 5px; }
+::-webkit-scrollbar-corner,
+::-webkit-scrollbar-track { background: transparent; }
+::-webkit-scrollbar-thumb { background-color: #2a2a2a; }
+::-webkit-scrollbar-thumb:hover { background: #2a2a2a; }
+
 #terminal-menu > div:nth-child(2) ul li {
 	padding-left: 15px;
 }
@@ -32,3 +38,16 @@ li.action-item.preview-control.checked a.lock-panel-action {
 	padding-right: 18px;
 }
 
+body:hover #terminal .xterm-viewport {
+	opacity: 1;
+	transition: opacity 0.33s;
+}
+
+body #terminal .xterm-viewport {
+	overflow-y: auto !important;
+	opacity: 0;
+	transition: opacity 0.66s;
+}
+body #terminal .xterm .xterm-scroll-area {
+	visibility: visible !important;
+}
